--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
       "example": "./demo"
   },
   "devDependencies": {
-      "coffee-script": ">=1.0.1"
   },
   "dependencies": {
-      "png-js": ">=0.1.0"
+      "png-js": ">=0.1.0",
+      "coffee-script": ">=1.0.1"
   },
   "scripts": {
       "prepublish": "coffee -o js -c lib/ && cp -r lib/font/data js/font/data",
